bindata/networkpolicies/cert-manager-allow-egress-to-dns-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-allow-egress-to-dns
  namespace: cert-manager
  labels:
    cert-manager.operator.openshift.io/owned-by: cert-manager
spec:
  podSelector:
    matchLabels:
      app: cert-manager
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - protocol: TCP
          port: 5353
        - protocol: UDP
          port: 5353
  policyTypes:
    - Egress
