bindata/networkpolicies/cert-manager-allow-ingress-to-metrics-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-allow-ingress-to-metrics
  namespace: cert-manager
  labels:
    cert-manager.operator.openshift.io/owned-by: cert-manager
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-user-workload-monitoring
    ports:
    - protocol: TCP
      port: 9402
