bindata/networkpolicies/http01-proxy-allow-egress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-http01-proxy-allow-egress
  namespace: cert-manager-operator
  labels:
    app: cert-manager-http01-proxy
    app.kubernetes.io/name: cert-manager-http01-proxy
    app.kubernetes.io/part-of: cert-manager-operator
spec:
  podSelector:
    matchLabels:
      app: cert-manager-http01-proxy
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 443
          protocol: TCP
        - port: 6443
          protocol: TCP
        - port: 80
          protocol: TCP
