bindata/networkpolicies/istio-csr-allow-ingress-to-metrics-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: istio-csr-allow-ingress-to-metrics
  labels:
    istiocsr.operator.openshift.io/owned-by: istio-csr
spec:
  podSelector:
    matchLabels:
      app: cert-manager-istio-csr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-user-workload-monitoring
    ports:
    - protocol: TCP
      port: 9402
