bindata/networkpolicies/trust-manager-allow-egress-to-api-server-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: trust-manager-allow-egress-to-api-server
  namespace: cert-manager
  labels:
    app: trust-manager
    app.kubernetes.io/name: trust-manager
    app.kubernetes.io/managed-by: cert-manager-operator
spec:
  podSelector:
    matchLabels:
      app: trust-manager
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 6443
