bindata/networkpolicies/trust-manager-deny-all-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: trust-manager-deny-all
  namespace: cert-manager
  labels:
    app: trust-manager
    app.kubernetes.io/name: trust-manager
    app.kubernetes.io/managed-by: cert-manager-operator
spec:
  podSelector:
    matchLabels:
      app: trust-manager
  policyTypes:
    - Ingress
    - Egress
